--- a/static/custom.css
+++ b/static/custom.css
@@ -34,7 +34,6 @@ body {
     display: -ms-flexbox;
     display: flex;
     color: #fff;
-    text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
@@ -65,6 +64,7 @@ body {
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
     border-bottom-color: #39c9bb;
+    color: #fff;
 }
 
 .nav-masthead .nav-link + .nav-link {
